fix scrollbar style issue

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -40,8 +40,8 @@ footer {
 }
 
 .mainPage {
-    min-height: 100svh;
-    min-width: 100svw;
+    min-height: 100vh;
+    width: 100vw;
     background: url('../../public/assets/focus_zen_dark.png');
     background-size: cover;
     background-repeat: repeat;
